Fixed bug #47946 (ImageConvolution overwrites background) # original patch by  jcolby at acsol dot net

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@278616 c90b9560-bf6c-de11-be94-00142212c4b1